Not saving parameters if they are null. Styling

--- a/static/style.css
+++ b/static/style.css
@@ -5,11 +5,11 @@
     border-radius: 5px;
 }
 
-.settings h2 {
+.general-settings h2 {
     color: #007bff;
 }
 
-.settings label, .settings input {
+.general-settings label, .settings input {
     margin: 5px;
 }
 
