--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>Login</title>
+    <title>Sing In</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
