--- a/static/style.css
+++ b/static/style.css
@@ -50,10 +50,23 @@ body {
     border: 1px solid #cccccc;
 }
 
+.message-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
 .message {
     font-size: 24px;
     font-weight: bold;
-    color: #440154; /* Aligning with your existing color theme */
+    color: #440154;
+    display: flex;
+    border: 2px solid #440154;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 20px;
 }
 .loader {
     border: 5px solid #f3f3f3;
@@ -62,17 +75,11 @@ body {
     width: 40px;
     height: 40px;
     animation: spin 2s linear infinite;
+    margin: auto;
 }
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-}
-
-.general-settings {
-    border: 2px solid #440154;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 5px;
 }
 
 .general-settings h2 {
