--- a/templates/status.html
+++ b/templates/status.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class='message-container'>
-    <div class="message">
-        <div id="statusMessage">Running Mischbares...</div>
-        <br>
-        <div class="loader"></div>
-    </div>
+        <div class="message">
+            <div id="statusMessage">Running Mischbares...</div>
+            <div id="statusMessage">Check your console</div>
+            <div class="loader"></div>
+        </div>
     </div>
 </body>
 </html>
